Santa's-Sweatshop/santa.css
html {
  width: 100%;
  height: 100%;
  image-rendering: pixelated;
  font-family: "Lucida Console", "Courier Prime", monospace;
} 

body {
  z-index: 0;
  margin-top: 0px;
  background-image: url("Game/Buttons/background.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: 50% 40%;
}

header {
  z-index: 10;
  display: block;
  background: #bdebf2;
  position: fixed;
  text-align: center;
  width: 100%;
  height: 75px;
  top: 0;
  left: 0;  
}

h2 {
  color: white;
  -webkit-text-stroke: 1px black;
}

p {
  font-size: large;
}

a {
  font-size: large;
  color: #0059ff;
}

#snow-particles {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: -1;
}

#header-logo {
  display: inline;
  height: 100%;
}

#nav-bar {
  display: none;
}

.nav-link {
  font-size: xx-large;
  color: #1c73ee;
  text-shadow: 1px 1px black;
  text-decoration: none;
  transition: color 0.25s ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.nav-link:hover {
  color: #1252aa;
}

.warning {
  color: red;
  font-weight: bolder;
}

#image-display {
  display: none;
  z-index: 50;
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(75, 75, 75, 0.5);
}

#image-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  left: 50%;
  top: 50%;
  width: 75vw;
  position: fixed;
  transform: translate(-50%, -50%);
}

#arrow-left {
  border-radius: 35px 0px 0px 35px;
}

#arrow-right {
  border-radius: 0px 35px 35px 0px;
}

#displayed-image {
  z-index: 60;
  box-shadow: 0px 0px 0em 10px #1b1b1b;
  image-rendering: auto;
  width: 90%;
}

.image-nav {
  z-index: 70;
  box-shadow: 0px 0px 0em 10px #1b1b1b;
  align-self: stretch;
  display: block;
  cursor: pointer;
  width: 5%;
  text-align: center;
  align-items: center;
  line-height: calc(23895vw/728);
  font-size: 4vw;
  background-color: #2b2b2b;
}

#game {
  display: none;
  z-index: 100;
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  background-image: url("Game/Buttons/background.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: 50% 50%;
}

#game-container {
  display: block;
  line-height: 0;
  position: relative;
  margin-top: 125px;
  margin-bottom: 50px;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
  border: 5px solid #e8e8e8;
  box-shadow: 0px 0px 20px 20px #fff;
  justify-content: center;
  align-items: center;
}

#game-thumbnail {
  image-rendering: auto;
  width: 100%;
  height: 100%;
  object-fit: cover;
  filter: brightness(66%);
  transition: filter 0.25s ease-in;
  z-index: 1;
}

#game-thumbnail:hover {
  filter: brightness(80%);
}

#snow {
  position: absolute;
  width: 100%;
  left: 50%;
  transform: translate(-50%, 0%);
}

#play-nav {
  cursor: pointer;
}

#play-button {
  font-family: "Lucida Console", "Courier Prime", monospace;
  display: inline-flex;
  position: absolute;
  cursor: pointer;
  left: 50%;
  top: 50%;
  gap: 10px;
  padding: 5px;
  padding-right: 17px;
  border-radius: 15px;
  font-size: 25px;
  color: #ffe8ff;
  background-color: #75a7ec;
  border: none;
  box-shadow: 0px 0px 3px 3px #0a3b80;
  align-items: center;
  transform: translate(-50%, -50%);
  transition: filter 0.25s ease-in;
}

#play-button:hover {
  transition: transform 0.25s ease-out;
  transform: translate(-50%, -50%) scale(1.1);
  filter: brightness(110%);
} 

#play-icon {
  width: 75px;
  height: 75px;
  image-rendering: auto;
}

#fullscreen-button {
  display: none;
}

#description {
  width: 75%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#trailer {
  width: 66%;
  position: relative;
  display: block;
  margin-top: 40px;
  margin-left: auto;
  margin-right: auto;
  border: 3px solid #73afca;
  box-shadow: 0px 0px 25px 10px #73afca;
}

#icicles {
  left: calc(17% - 1.5px);
  width: calc(66% + 3px);
  position: relative;
}

#content {
  gap: 20px;
  margin: 25px;
  display: flex;
  flex-direction: column;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
}

#information {
  padding-right: 10px;
}

.credits-list {
  margin: 7.5px;
}

#ss-list {
  scroll-snap-type: x mandatory;
  border: 3px solid #73afca;
  display: flex;
  padding: 0px;
  flex-direction: row;
  overflow: auto;
}

.screenshots {
  scroll-snap-align: start;
  image-rendering: auto;
  display: inline-block;
  max-width: 100%;
}

#homepage-div {
  font-size: xx-large;
  display: block;
  padding: 1%;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  width: 66%;
  text-align: center;
  border-radius: 25px 25px 0px 0px;
  background-color: rgba(128, 184, 240, 0.75);
}


@media only screen and (min-width: 750px) {
  #nav-bar {
    display: inherit;
    float: right;
  }

  header {
    text-align: left;
  }

  header li {
    float: left;
    list-style-type: none;
    padding-top: 5px;
    padding-right: 35px;
  }
  
  body {
    margin-top: 85px;
  }

  #fullscreen-button {
    display: inherit;
  }
  
  #trailer {
    width: 50%;
    border: 5px solid #73afca;
  }

  #icicles {
    left: calc(25% - 2.5px);
    width: calc(50% + 5px);
  }

  #content {
    gap: 0px;
    flex-direction: row;
  }

  #ss-list {
    min-width: 250px;
    flex-direction: column;
    border: none;
  }
  
  .screenshots {
    border-style: solid;
    border-color: #73afca;
    margin: 5px;
  }

  #homepage-div {
    width: 50%;
  }
}

